package edu.hitsz.bullet;

/**
 * 敌机子弹
 * @Author hitsz qhy
 */
public class EnemyBullet extends BaseBullet {

    public EnemyBullet(int locationX, int locationY, int speedX, int speedY, int power) {
        super(locationX, locationY, speedX, speedY, power);
    }

}
