package edu.hitsz.prop;

/**
 * 炸弹道具
 */
public class BombProp extends AbstractProp {

    public BombProp(int locationX, int locationY,
                    int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }

}