package edu.hitsz.prop;

/**
 * 冰冻道具
 */
public class FreezeProp extends AbstractProp {

    public FreezeProp(int locationX, int locationY,
                      int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }

}